--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
                         Gracias por ser mi alegría, mi confidente y la persona que me enseñó a amar de verdad. Gracias por ser la razón de mi sonrisa a diario.<br><br>
 
-                        Feliz Día de la Novia, mi amor. <br> Con todo mi código (y mi corazón), <br> Tu niño enamorado.<br>
+                        Feliz Día de la Novia, mi amor. <br> Con todo mi código (y mi corazón), <br> Tu niño enamorado (E)<br>
                         <span style="font-size: 0.9em; color: grey;">PD: Si esta carta fuera un programa, su salida sería:</span> <br> <code>"Te amo, y siempre te elegiré."</code>
                     </p>
                 </div>
@@ -162,11 +162,11 @@
         if (reproduciendo) {
             miMusica.pause();
             reproduciendo = false;
-            iconoMusica.textContent = '🎶';
+            iconoMusica.textContent = '🎶⏯️';
         } else {
             miMusica.play();
             reproduciendo = true;
-            iconoMusica.textContent = '⏸️';
+            iconoMusica.textContent = '💽⏸️';
         }
     });
 </script>
