--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="contenido">
                         <strong>Hola, mi niña</strong>
                         <p>
-                            Hoy es el día oficial de las novias, pero para mí, cada día es una razón para celebrar que te tengo en mi vida. Al principio, mi amor era un misterio, como esa carta que te envié y que tardaste 2 meses en descifrar. Ahora es tan real y claro como cada palabra que te escribo.<br><br>Aún con un océano de distancia, mi corazón late más rápido cuando veo una notificación tuya. Y aunque no estamos juntos para celebrarlo, tu presencia me da una paz y una alegría que no podría describir. Siempre estaré esperando aquel día en que podamos volver a vernos.<br><br>
+                            Hoy es el día oficial de las novias, pero para mí, cada día es una razón para celebrar que te tengo en mi vida. Al principio, mi amor era un misterio, como esa carta que te envié y que tardaste 1 mese en descifrar. Ahora es tan real y claro como cada palabra que te escribo.<br><br>Aún con un océano de distancia, mi corazón late más rápido cuando veo una notificación tuya. Y aunque no estamos juntos para celebrarlo, tu presencia me da una paz y una alegría que no podría describir. Siempre estaré esperando aquel día en que podamos volver a vernos.<br><br>
 
                         Gracias por ser mi alegría, mi confidente y la persona que me enseñó a amar de verdad. Gracias por ser la razón de mi sonrisa a diario.<br><br>
 
