--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
         if (reproduciendo) {
             miMusica.pause();
             reproduciendo = false;
-            iconoMusica.textContent = '🎶⏯️';
+            iconoMusica.textContent = '⏯️🎶';
         } else {
             miMusica.play();
             reproduciendo = true;
-            iconoMusica.textContent = '💽⏸️';
+            iconoMusica.textContent = '⏸️💽';
         }
     });
 </script>
