--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
-    <title>Para Mia, en su día ❤️</title>
+    <title>Para Mia, en su día 🪻🩷</title>
     <style>
         body {
             margin: 0;
@@ -126,7 +126,7 @@
 
 </head>
 <body>
-    <h1>¡Feliz Día de la Novia, mi amor! ❤️</h1>
+    <h1>¡Feliz Día de la Novia, mi amor! 🐯❤️‍🔥</h1>
     <div class="contenedor">
         <div class="envoltura-sobre">
             <div class="sobre">
@@ -149,7 +149,7 @@
 </div>
 
 <div style="text-align:center; margin-top: 10px;">
-    <span id="iconoMusica" style="font-size: 1.5em; cursor: pointer;">🎶</span>
+    <span id="iconoMusica" style="font-size: 1.5em; cursor: pointer;">⏯️🎵🎶</span>
     <audio id="miMusica" src="Musique.mp3" loop style="display:none;"></audio>
 </div>
 
