--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
                         Gracias por ser mi alegría, mi confidente y la persona que me enseñó a amar de verdad. Gracias por ser la razón de mi sonrisa a diario.<br><br>
 
-                        Feliz Día de la Novia, mi amor. <br> Con todo mi código (y mi corazón), <br> Tu niño enamorado (E)<br>
+                        Feliz Día de la Novia,~𝑴𝒊𝒂~ <br> Con todo mi código (y mi corazón), <br> Tu niño enamorado (E)<br>
                         <span style="font-size: 0.9em; color: grey;">PD: Si esta carta fuera un programa, su salida sería:</span> <br> <code>"Te amo, y siempre te elegiré."</code>
                     </p>
                 </div>
